fix spacing between record item header and fields on SPS case in non complince form

--- a/src/web/assets/css/application.css
+++ b/src/web/assets/css/application.css
@@ -345,6 +345,10 @@ a:focus, .govuk-link:focus {
   .govuk-heading-l {
     margin-bottom: 30px;
   }
+
+  .govuk-heading-l.no-margin-bottom {
+    margin-bottom: 0 !important;
+  }
 }
 
 .hmrc-timeline__event-title, .govuk-heading-m {
